--- a/reservas-teatro-infra/pom.xml
+++ b/reservas-teatro-infra/pom.xml
@@ -16,5 +16,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 </project>
